--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p>My greatest passion is music. I have a cover band called Full House, and you can follow our project on <a href="https://www.fb.com/FullHouseCBand" target="_blank">Facebook</a> and Instagram at <a href="https://www.instagram.com/fullhousecband" target="_blank">@fullhousecband</a>.</p>
             <p>I usually perform on weekends at events where we can already see a monetary gain. Additionally, I have an upcoming performance on October 13th at the Javier Barros Sierra Auditorium at the Faculty of Engineering.</p>
             <p>I also love listening to music. I dedicate a lot of time to it, not so much to watching TV series or movies. I tend to explore various genres and immerse myself in them.</p>
-            <img src="imagenes/me.jpg" alt="Me c:">
+            <img src="me.jpg" alt="Me c:">
         </section>
         <section id="cv">
             <h2>Professional Studies: Pursuing a degree in Computer Engineering</h2>
@@ -39,7 +39,7 @@
         </section>
         <section id="schedule">
             <h2>Schedule</h2>
-            <img src="imagenes/schedule.jpg" alt="Schedule">
+            <img src="schedule.jpg" alt="Schedule">
         </section>
         <section id="technology">
             <h2>5G Advanced and 6G</h2>
